fix(calc): Improve grid colors in dark mode

--- a/browser/css/color-palette.css
+++ b/browser/css/color-palette.css
@@ -50,6 +50,8 @@
 	--color-box-shadow: rgba(77, 77, 77, 0.5);
 	--color-hyperlink: #000080;
 
+	--color-calc-grid: #c0c0c0;
+
 	--color-grid-helper-line-solid: #e6e6e6;
 	--color-grid-helper-line-dashed: #191919;
 	--color-smart-guides-helper-line: #f36d4f;
